automatically backed up by learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -13,3 +13,30 @@
   <%= f.text_field :inventory %>
   <%= f.submit "submit" %>
 <% end %>
+
+<h1 id="product-name"></h1>
+<p id="product-price"></p>
+<p id="product-description"></p>
+<p id="product-inventory"></p>
+
+
+<script>
+  $(function(){
+    $('form').submit(function(event){
+      event.preventDefault();
+
+      var inputs=$(this).serialize();
+
+      var creatingProduct=$.post("/products",inputs);
+
+      creatingProduct.done(function(data){
+        $("#product-name").text(data["name"])
+        $("#product-description").text(data["description"])
+        $("#product-price").text(data["price"])
+        $("#product-inventory").text(data["inventory"])
+
+
+      })
+    })
+  })
+</script>
